fix 'add timer' color on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -19,6 +19,7 @@ button {
 
 .link {
   text-decoration: none;
+  color: inherit;
 }
 
 nav {
